--- a/index.html
+++ b/index.html
@@ -1,214 +1,333 @@
 <!DOCTYPE html>
 <html data-wf-page="5ebf59786f5811b624b29885" data-wf-site="5ebf59786f5811b7a9b29884">
+
 <head>
-  <meta charset="utf-8">
-  <title>Brad Vorjohan</title>
-  <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta charset="utf-8">
+    <title>Brad Vorjohan</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
 
-  <meta name="description" content="Brad Vorjohan, Developer and Product Manager" />
+    <meta name="description" content="Brad Vorjohan, Developer and Product Manager" />
 
-  <!-- Twitter data -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Brad Vorjohan">
-  <meta name="twitter:description" content="Brad Vorjohan, Developer and Product Manager">
-  <meta name="twitter:creator" content="@bvorjohan">
-  <meta name="twitter:image" content="http://brad-v.me/img/profile_square.png">
+    <!-- Twitter data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Brad Vorjohan">
+    <meta name="twitter:description" content="Brad Vorjohan, Developer and Product Manager">
+    <meta name="twitter:creator" content="@bvorjohan">
+    <meta name="twitter:image" content="http://brad-v.me/img/profile_square.png">
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="Brad Vorjohan" />
-  <meta property="og:url" content="https://brad-v.me" />
-  <meta property="og:image" content="http://brad-v.me/img/profile_square.png" />
-  <meta property="og:description" content="Brad Vorjohan, Developer and Product Manager" />
-  <meta property="og:site_name" content="Brad Vorjohan's portfolio website" />
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Brad Vorjohan" />
+    <meta property="og:url" content="https://brad-v.me" />
+    <meta property="og:image" content="http://brad-v.me/img/profile_square.png" />
+    <meta property="og:description" content="Brad Vorjohan, Developer and Product Manager" />
+    <meta property="og:site_name" content="Brad Vorjohan's portfolio website" />
 
-  <!-- Favicon/theme -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/img/manifest.json">
-  <link rel="shortcut icon" href="/img/favicon.ico">
-  <meta name="msapplication-config" content="/img/browserconfig.xml">
-  <meta name="theme-color" content="#24252d">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">
-      WebFont.load({
-        google: {
-          families: ["Nunito:regular"]
-        }
-      });
+    <!-- Favicon/theme -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/img/manifest.json">
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <meta name="msapplication-config" content="/img/browserconfig.xml">
+    <meta name="theme-color" content="#24252d">
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        WebFont.load({
+            google: {
+                families: ["Nunito:regular"]
+            }
+        });
     </script>
-  <script type="text/javascript">
-      ! function(o, c) {
-        var n = c.documentElement,
-          t = " w-mod-";
-        n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
-      }(window, document);
+    <script type="text/javascript">
+        ! function (o, c) {
+            var n = c.documentElement,
+                t = " w-mod-";
+            n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+        }(window, document);
     </script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
-  <style>
-      /* body {
+    <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="images/webclip.png" rel="apple-touch-icon">
+    <style>
+        /* body {
         height: 100vh;
         margin: 0;
       } */
-      body {
-        height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
-  font-family: Nunito, Helvetica, sans-serif;
-      }
-      .container {
-          height: 100%;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-      }
-      h1 {
-          text-align: center;
-      }
-      .recipe-name {
-          text-align: center;
-      }
+        body {
+            height: 100vh;
+            /* Fallback for browsers that do not support Custom Properties */
+            height: calc(var(--vh, 1vh) * 100);
+            font-family: Nunito, Helvetica, sans-serif;
+            overflow-y: hidden;
+        }
 
-/* General button style (reset) */
-.btn {
-	border: none;
-	font-family: inherit;
-	font-size: inherit;
-	color: inherit;
-	background: none;
-	cursor: pointer;
-	padding: 25px 80px;
-	display: inline-block;
-	margin: 15px 30px;
-	letter-spacing: 1px;
-	font-weight: 700;
-	outline: none;
-	position: relative;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
-}
+        .container {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
 
-.btn:after {
-	content: '';
-	position: absolute;
-	z-index: -1;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
-}
+        h1 {
+            text-align: center;
+        }
 
-/* Button 2 */
-.btn-2 {
-	background: #4593e3;
-	color: #fff;
-	box-shadow: 0 6px #226fbe;
-	-webkit-transition: none;
-	-moz-transition: none;
-	transition: none;
-}
+        .recipe-name {
+            text-align: center;
+        }
 
-/* Button 2a */
-.btn-2a {
-	border-radius: 0 0 5px 5px;
-}
+        /* General button style (reset) */
+        .btn {
+            border: none;
+            font-family: inherit;
+            font-size: inherit;
+            color: inherit;
+            background: none;
+            cursor: pointer;
+            padding: 25px 80px;
+            display: inline-block;
+            margin: 15px 30px;
+            letter-spacing: 1px;
+            font-weight: 700;
+            outline: none;
+            position: relative;
+            -webkit-transition: all 0.3s;
+            -moz-transition: all 0.3s;
+            transition: all 0.3s;
+        }
 
-.btn-2a:hover {
-	box-shadow: 0 4px #226fbe;
-	top: 2px;
-}
+        .btn:after {
+            content: '';
+            position: absolute;
+            z-index: -1;
+            -webkit-transition: all 0.3s;
+            -moz-transition: all 0.3s;
+            transition: all 0.3s;
+        }
 
-.btn-2a:active {
-	box-shadow: 0 0 #226fbe;
-	top: 6px;
-}
-  </style>
+        /* Button 2 */
+        .btn-2 {
+            background: #4593e3;
+            color: #fff;
+            box-shadow: 0 6px #226fbe;
+            -webkit-transition: none;
+            -moz-transition: none;
+            transition: none;
+        }
+
+        /* Button 2a */
+        .btn-2a {
+            border-radius: 0 0 5px 5px;
+        }
+
+        .btn-2a:hover {
+            box-shadow: 0 4px #226fbe;
+            top: 2px;
+        }
+
+        .btn-2a:active {
+            box-shadow: 0 0 #226fbe;
+            top: 6px;
+        }
+
+        .modal {
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Stay in place */
+            z-index: 1;
+            /* Sit on top */
+            left: 0;
+            top: 0;
+            width: 100%;
+            /* Full width */
+            height: 100%;
+            /* Full height */
+            overflow: auto;
+            /* Enable scroll if needed */
+            background-color: rgb(0, 0, 0);
+            /* Fallback color */
+            background-color: rgba(0, 0, 0, 0.4);
+            /* Black w/ opacity */
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            /* 15% from the top and centered */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            /* Could be more or less, depending on screen size */
+        }
+    </style>
 </head>
+
 <body>
-  <div class="container">
-      <div>
-        <h1>Brad's Recipe Spinner</h1>
-        <h2 class="recipe-name" id="recipe-name">--</h2>
-      </div>
-      <button id="main" class="btn btn-2 btn-2a">Refresh meal ideas</button>
-  </div>
-  <script>
-      let vh = window.innerHeight * 0.01;
-      document.documentElement.style.setProperty('--vh', `${vh}px`);
+    <div class="container">
+        <div>
+            <div><div></div><a id="current-user-picker"></a></div>
+            <h1>Brad's Recipe Spinner</h1>
+            <h2 class="recipe-name" id="recipe-name">--</h2>
+        </div>
+        <button id="main" class="btn btn-2 btn-2a">Refresh meal ideas</button>
+    </div>
+    <div id="myModal" class="modal">
 
+        <!-- Modal content -->
+        <div class="modal-content">
+            <!-- <span class="close">&times;</span> -->
+            <p>Who are you</p>
+            <div id="user-select-buttons">
+                <button>Anna</button>
+                <button>Caroline</button>
+                <button>Gagan</button>
+            </div>
+        </div>
 
-      const random = (arr) => arr[Math.floor((Math.random()*arr.length))]
-      const recipes = [
-          {
-              name: "Chicken and Rice Casserole"
-          },
-          {
-              name: "Burmese Chicken"
-          },
-          {
-              name: "Enchiladas"
-          },
-          {
-              name: "Chili"
-          },
-          {
-              name: "Gochujang Shrimp and Green Beans"
-          },
-          {
-              name: "Tortilla Soup"
-          },
-          {
-              name: "Avgolemono",
-              href: undefined,
-          },
-          {
-              name: "Brad Spaghetti"
-          },
-          {
-              name: "Turkey Meatballs w/ red sauce"
-          },
-          {
-              name: "Chicken Meatballs w/ Tzatziki"
-          },
-          {
-              name: "Chicken Marsala"
-          },
-          {
-              name: "Lemon Chicken (or other Seared Chicken)",
-              href: "https://cooking.nytimes.com/recipes/1019909-weeknight-lemon-chicken-breasts-with-herbs",
-          },
-          {
-              name: "Black Pepper Beef and Cabbage Stir-Fry",
-              href: "https://cooking.nytimes.com/recipes/1020506-black-pepper-beef-and-cabbage-stir-fry",
-          },
-          {
-              name: "Anna's Black Beans",
-              href: undefined,
-          },
-          {
-              name: "Anna's White Beans",
-              href: undefined,
-          },
-      ];
-      const button = document.getElementById("main");
-      const recipeDisplay = document.getElementById("recipe-name");
-      const updateRecipe = ({
-          name,
-          href
-      }) => {
-          // TODO: make this work with not just text
-      }
-      button.addEventListener("click", () => {
-          const randomRecipe = () => random(recipes).name
-          const recursiveRecipe = (curr) => {
-              let newRecipe = randomRecipe();
-              if (newRecipe === curr) {
-                  newRecipe = recursiveRecipe();
-              }
-              return newRecipe;
-          }
-          recipeDisplay.innerText = recursiveRecipe(recipeDisplay.innerText);
-      })
-  </script>
+    </div>
+    <script>
+        let vh = window.innerHeight * 0.01;
+        document.documentElement.style.setProperty('--vh', `${vh}px`);
+        const modal = document.getElementById("myModal");
+        let user
+        try {
+            user = getCookie('user');
+        } catch (e) {}
+
+        const currentUserPicker = document.getElementById("current-user-picker");
+        currentUserPicker.addEventListener("click", () => {
+            eraseCookie("user");
+            modal.style.display = "block";
+        })
+
+        const setCookie = (name, value, days) => {
+            var expires = "";
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                expires = "; expires=" + date.toUTCString();
+            }
+            document.cookie = name + "=" + (value || "") + expires + "; path=/";
+        }
+        const getCookie = (name) => {
+            var nameEQ = name + "=";
+            var ca = document.cookie.split(';');
+            for (var i = 0; i < ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+            }
+            return null;
+        }
+        const eraseCookie = (name) => {
+            document.cookie = name + '=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+        }
+
+        const userSelectButtons = document.getElementById("user-select-buttons").childNodes;
+        userSelectButtons.forEach(item => item.addEventListener("click",(event) => {
+            user = event.target.innerText;
+            currentUserPicker.innerText = user;
+            setCookie("user",user);
+            modal.style.display = "none";
+        }))
+
+        console.log({ user })
+        if (!user) {
+            modal.style.display = "block";
+        }
+
+        const random = (arr) => arr[Math.floor((Math.random() * arr.length))]
+        const recipeObj = {
+            Anna: [
+            {
+                name: "Chicken and Rice Casserole"
+            },
+            {
+                name: "Burmese Chicken"
+            },
+            {
+                name: "Enchiladas"
+            },
+            {
+                name: "Chili"
+            },
+            {
+                name: "Gochujang Shrimp and Green Beans"
+            },
+            {
+                name: "Tortilla Soup"
+            },
+            {
+                name: "Avgolemono",
+                href: undefined,
+            },
+            {
+                name: "Brad Spaghetti"
+            },
+            {
+                name: "Turkey Meatballs w/ red sauce"
+            },
+            {
+                name: "Chicken Meatballs w/ Tzatziki"
+            },
+            {
+                name: "Chicken Marsala"
+            },
+            {
+                name: "Lemon Chicken (or other Seared Chicken)",
+                href: "https://cooking.nytimes.com/recipes/1019909-weeknight-lemon-chicken-breasts-with-herbs",
+            },
+            {
+                name: "Black Pepper Beef and Cabbage Stir-Fry",
+                href: "https://cooking.nytimes.com/recipes/1020506-black-pepper-beef-and-cabbage-stir-fry",
+            },
+            {
+                name: "Anna's Black Beans",
+                href: undefined,
+            },
+            {
+                name: "Anna's White Beans",
+                href: undefined,
+            },
+        ],
+        Caroline: [
+            {
+                name: "Something Malaysian"
+            },
+            {
+                name: "Something Singaporean"
+            },
+        ],
+        Gagan: [
+            {
+                name: "Coke Zero"
+            },
+            {
+                name: "Takeout"
+            },
+        ]
+        }
+        const recipes = (name) => recipeObj[name];
+        const button = document.getElementById("main");
+        const recipeDisplay = document.getElementById("recipe-name");
+        const updateRecipe = ({
+            name,
+            href
+        }) => {
+            // TODO: make this work with not just text
+        }
+        button.addEventListener("click", () => {
+            const randomRecipe = () => random(recipes(user)).name
+            const recursiveRecipe = (curr) => {
+                let newRecipe = randomRecipe();
+                if (newRecipe === curr) {
+                    newRecipe = recursiveRecipe();
+                }
+                return newRecipe;
+            }
+            recipeDisplay.innerText = recursiveRecipe(recipeDisplay.innerText);
+        })
+    </script>
 </body>
+
 </html>
