--- a/index.html
+++ b/index.html
@@ -190,9 +190,15 @@
         document.documentElement.style.setProperty('--vh', `${vh}px`);
         const modal = document.getElementById("myModal");
         let user
+        console.log({user})
         try {
+            console.log("trying user")
             user = getCookie('user');
-        } catch (e) {}
+            console.log({user})
+
+        } catch (e) {
+            console.log({e})
+        }
 
         const currentUserPicker = document.getElementById("current-user-picker");
         currentUserPicker.addEventListener("click", () => {
