--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         const eraseCookie = (name) => {
             document.cookie = name + '=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
         }
-        
+
         const modal = document.getElementById("myModal");
         let user
         console.log({user})
@@ -240,6 +240,8 @@
         console.log({ user })
         if (!user) {
             modal.style.display = "block";
+        } else {
+            currentUserPicker.innerText = user;
         }
 
         const random = (arr) => arr[Math.floor((Math.random() * arr.length))]
