--- a/index.html
+++ b/index.html
@@ -297,6 +297,18 @@
                 name: "Anna's White Beans",
                 href: undefined,
             },
+            {
+                name: "Kuku",
+                href: undefined,
+            },
+            {
+                name: "Curry",
+                href: undefined,
+            },
+            {
+                name: "Polenta w/ Veggies",
+                href: undefined,
+            },
         ],
         Caroline: [
             {
