--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html data-wf-page="5ebf59786f5811b624b29885" data-wf-site="5ebf59786f5811b7a9b29884">
+<html >
 
 <head>
     <meta charset="utf-8">
     <title>Brad Vorjohan</title>
-    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" name="viewport">
 
     <meta name="description" content="Brad Vorjohan, Developer and Product Manager" />
 
