--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
         /* General button style (reset) */
         .btn {
+            touch-action: manipulation; 
             border: none;
             font-family: inherit;
             font-size: inherit;
