why won't the internet just work

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             /* Fallback for browsers that do not support Custom Properties */
             height: calc(var(--vh, 1vh) * 100);
             font-family: Nunito, Helvetica, sans-serif;
-            overflow-y: hidden;
+            overflow: hidden;
+            position: relative;
         }
 
         .container {
